# devtools-protocol

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  GDP_Domains_Reference.md  README.md  about.md  changelog.md  genDocs.py  mod.json  o.md  wstest.py
.github/workflows/: multi-platform.yml
protocol_definitions/: convert.py  gd_protocol.pdl  pdl.py  protocols.json
resources/: protocols.json
src/: WS.cpp  WS.hpp  b64.cpp  b64.hpp  future.hpp  main.cpp  stuff.cpp  stuff.h  stuff.hpp
src/domains/: Animation.cpp  Animation.cpp.exclude  DOM.cpp  DOM.cppt  DOM.hpp  Game.cpp  Input.cpp  Level.cpp  Levels.cpp  Log.cpp  Mod.cpp  Mods.cpp  Network.cpp  Network.cpp.exclude  Runtime.cpp  Runtime.hpp  protocolInfo.cpp
src/domains/jsenv/: console.cpp  console.hpp  dom.cpp  state.cpp  state.h  state.hpp
src/domains/jsenv/dom/: element.cpp  element.hpp  insanity.cpp  insanity.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp
src/domains/s/: ActionManagerReimpl.cppwegvwegfvwef
src/testui/: cells.cpp  cells.hpp  extremedemon.cpp  goose.cpp  goose.hpp  mdtextarea2.cpp  mdtextarea2.hpp  options_cells.cpp  options_cells.hpp  popups.cpp  popups.hpp  popups_eventInfo.cpp  popups_methodInfo.cpp  protocols_json_struct.hpp
